[workspace]
members = ["contracts/*"]

[workspace.package]
authors = ["Rewind Labs <rewindlabs@users.noreply.github.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/rewindlabs/playerx-contract"
rust-version = "1.65"

[workspace.dependencies]
cosmwasm-schema = "^1.2"
cosmwasm-std = "^1.2"
cw2 = "^1.1"
cw20 = "^1.1"
cw721 = "0.17.0"
cw721-base = { version = "*", path = "./contracts/cw721-base" }
cw721-reroll = { version = "*", path = "./contracts/cw721-reroll" }
cw721-base-016 = { version = "0.16.0", package = "cw721-base" }
cw-multi-test = "^0.20"
cw-ownable = "^0.5"
cw-storage-plus = "^1.1"
cw-utils = "^1.0"
schemars = "^0.8"
serde = { version = "1.0.152", default-features = false, features = ["derive"] }
thiserror = "^1.0"
